// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswersTable matches tutor teacher-preview snapshot 1`] = `
.c1 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c1 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c1 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled"
    >
      <div
        className="correct-incorrect"
      />
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
        onKeyPress={[Function]}
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice A:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          />
          <span
            className="c1 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds of less than roughly 1% the speed of light,</li>
  <li>objects are too small to be seen with the naked eye, and</li>
  <li>there is the involvement of only a weak gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled"
    >
      <div
        className="correct-incorrect"
      />
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
        onKeyPress={[Function]}
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice B:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          />
          <span
            className="c1 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<ol>
  <li>matter is moving at speeds greater than roughly 1% the speed of light,</li>
  <li>objects are large enough to be seen with the naked eye, and</li>
  <li>there is the involvement of a strong gravitational field</li>
</ol>
",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`AnswersTable renders all feedback 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #C22032;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale));
  font-weight: bold;
}

.c3 {
  color: #0D7741;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale));
  font-weight: bold;
}

<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled answer-selected answer-incorrect"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice A:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          >
            <div
              className="c1"
            >
              <span>
                Incorrect Answer
              </span>
            </div>
          </div>
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="c2 question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Answer level feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled answer-correct"
    >
      <input
        aria-details="feedback-1-1"
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice B:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          >
            <div
              className="c3"
            >
              <span>
                Correct Answer
              </span>
            </div>
          </div>
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-1"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="c2 question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Answer level feedback",
          }
        }
      />
    </aside>
  </aside>
</div>
`;

exports[`AnswersTable renders correct answer feedback 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #0D7741;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale));
  font-weight: bold;
}

<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled answer-selected answer-correct"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice A:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          >
            <div
              className="c1"
            >
              <span>
                Correct Answer
              </span>
            </div>
          </div>
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="c2 question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice B:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          />
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`AnswersTable renders incorrect answer feedback 1`] = `
.c2 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c2 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c2 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c1 {
  color: #C22032;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale));
  font-weight: bold;
}

.c3 {
  color: #0D7741;
  text-transform: uppercase;
  font-size: calc(1.1rem * var(--content-text-scale));
  font-weight: bold;
}

<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled answer-selected answer-incorrect"
    >
      <input
        aria-details="feedback-1-0"
        checked={true}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice A:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          >
            <div
              className="c1"
            >
              <span>
                Incorrect Answer
              </span>
            </div>
          </div>
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <aside
    className="question-feedback bottom"
    id="feedback-1-0"
  >
    <div
      aria-label="Answer Feedback"
      className="arrow"
    />
    <aside>
      <div
        className="c2 question-feedback-content has-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Feedback",
          }
        }
      />
    </aside>
  </aside>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled answer-correct"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice B:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          >
            <div
              className="c3"
            >
              <span>
                Correct Answer
              </span>
            </div>
          </div>
          <span
            className="c2 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`AnswersTable renders instructions 1`] = `
.c1 .image-button-wrapper {
  border: none;
  padding: 0;
  margin: 0;
  background: none;
  display: inline-block;
  cursor: pointer;
}

.c1 .image-button-wrapper:focus {
  outline: 1px solid Highlight;
  outline: 1px solid -webkit-focus-ring-color;
  outline-offset: 2px;
}

.c1 .image-button-wrapper img {
  display: block;
  max-width: 100%;
  height: auto;
}

.c0 {
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<div
  aria-label="Answer choices"
  className="answers-table"
  role="radiogroup"
>
  <b>
    Instructions
  </b>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-0"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-0"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="A"
          data-test-id="answer-choice-A"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice A:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          />
          <span
            className="c1 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "True",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
  <div
    className="openstax-answer"
  >
    <div
      className="answers-answer disabled"
    >
      <input
        checked={false}
        className="answer-input-box"
        disabled={true}
        id="1-option-1"
        name="1-options"
        onChange={[Function]}
        type="radio"
      />
      <label
        className="answer-label"
        htmlFor="1-option-1"
      >
        <span
          aria-hidden="true"
          className="answer-letter-wrapper"
          data-answer-choice="B"
          data-test-id="answer-choice-B"
        />
        <span
          className="c0 answer-choice-label"
        >
          Choice B:
        </span>
        <div
          className="answer-answer"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            className="answer-indicator-live"
            role="status"
          />
          <span
            className="c1 answer-content"
            dangerouslySetInnerHTML={
              Object {
                "__html": "False",
              }
            }
          />
        </div>
      </label>
    </div>
  </div>
</div>
`;
